--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ out/
 
 ### VS Code ###
 .vscode/
+
+/src/ui/angular/node_modules
+/src/ui/angular/sensor-chart/node_modules
+/src/ui/angular/sensor-chart/.angular
+
+/src/ui/angular/sensor-chart/node_modules/
