add ui to project

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ out/
 /src/ui/angular/sensor-chart/node_modules
 /src/ui/angular/sensor-chart/.angular
 
+/src/ui/angular/sensor-chart/dist/sensor-chart/
