--- a/src/ui/angular/package.json
+++ b/src/ui/angular/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
     "@angular/cli": "^13.0.4"
-  }
+  },
+  "name": "angular",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
