--- a/src/ui/angular/sensor-chart/angular.json
+++ b/src/ui/angular/sensor-chart/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -51,7 +52,10 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "outputPath": "../../../main/resources/static",
+              "baseHref": "/sensor-service/",
+              "deployUrl": "/sensor-service/"
             },
             "development": {
               "buildOptimizer": false,
