configuration for mqtt broker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 
 telegram.bot.name=@telegram_bot_name@
 telegram.bot.token=@telegram_bot_token@
+
+mqtt.username=@mqtt_username@
+mqtt.password=@mqtt_password@
+mqtt.host_url=@mqtt_host_url@
+mqtt.clientID=@mqtt_client_id@
+mqtt.default-topic=@mqtt_default_topic@
+mqtt.timeout=100
+mqtt.keepalive=100
