config local env. added mqtt client implemented registration service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ telegram.bot.token=@telegram_bot_token@
 
 mqtt.username=@mqtt_username@
 mqtt.password=@mqtt_password@
-mqtt.host_url=@mqtt_host_url@
+mqtt.hostUrl=@mqtt_host_url@
 mqtt.clientID=@mqtt_client_id@
-mqtt.default-topic=@mqtt_default_topic@
+mqtt.default-topic=welcome
 mqtt.timeout=100
 mqtt.keepalive=100
