registartion concept was implemented, but bugs should be fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,13 @@ spring.datasource.username=@mariadb_username@
 spring.datasource.password=@mariadb_password@
 spring.datasource.driver-class-name=@mariadb_driver@
 
+
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
 # Show or not log for each sql query
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
 #spring.jpa.hibernate.ddl-auto=create-drop
@@ -32,3 +34,9 @@ mqtt.clientID=@mqtt_client_id@
 mqtt.default-topic=welcome
 mqtt.timeout=100
 mqtt.keepalive=100
+
+
+# logging level
+logging.level.org.springframework=ERROR
+logging.level.org.komarichyn=DEBUG
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
