new implementation for registration devices via mqtt

--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     image: eclipse-mosquitto:latest
     volumes:
       - ./config/mosquitto/config:/mosquitto/config/
+      - ./config/mosquitto/log:/mosquitto/log/
     ports:
       - '1883:1883'
       - '9001:9001'
