add device overview update angular tune navigation

--- a/src/ui/angular/package.json
+++ b/src/ui/angular/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@angular/cli": "^13.0.4"
+    "@angular/cli": "~13.1.2"
   },
   "name": "angular",
   "version": "1.0.0",
