fixed bugs and adjust functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,6 +37,11 @@ mqtt.keepalive=100
 
 
 # logging level
-logging.level.org.springframework=ERROR
+logging.level.org.springframework=INFO
 logging.level.org.komarichyn=DEBUG
 logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+logging.file.name=sensor-service.log
+
+#Actuator
+management.endpoints.web.exposure.include=health,info,loggers
+management.endpoint.loggers.enabled=true
