--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - '9001:9001'
     networks:
       - default
-    restart: unless-stopped
+    restart: on-failure
 
   mariadb:
     container_name: ss-mariadb
