--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
       <artifactId>lombok</artifactId>
     </dependency>
     <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.modelmapper</groupId>
       <artifactId>modelmapper</artifactId>
       <version>2.4.5</version>
