--- a/embeded/esp/platformio.ini
+++ b/embeded/esp/platformio.ini
@@ -12,3 +12,13 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+
+;/dev/cu.SLAB_USBtoUART
+monitor_port = /dev/cu.SLAB_USBtoUART
+monitor_speed = 115200
+upload_port = /dev/cu.SLAB_USBtoUART
+upload_speed = 115200
+
+lib_deps =
+    knolleary/PubSubClient@^2.8
+    bblanchon/ArduinoJson@^6.18.5
