--- a/embeded/esp/platformio.ini
+++ b/embeded/esp/platformio.ini
@@ -20,5 +20,6 @@ upload_port = /dev/cu.SLAB_USBtoUART
 upload_speed = 115200
 
 lib_deps =
+    enjoyneering/AHT10@^1.1.0
     knolleary/PubSubClient@^2.8
     bblanchon/ArduinoJson@^6.18.5
