fix bug with stuck after publishing. Code should be refactored

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ mqtt.username=@mqtt_username@
 mqtt.password=@mqtt_password@
 mqtt.hostUrl=@mqtt_host_url@
 mqtt.clientID=@mqtt_client_id@
-mqtt.default-topic=welcome
+mqtt.default-topic=#
 mqtt.timeout=100
 mqtt.keepalive=100
 
